// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`the prose pins — every other word, exactly as it reads today · en > pins every sentence in both epitaph pools, and the spent one 1`] = `
[
  "1 placements, and the last tile went down alone. The next would have cost 1.",
  "12 placements, then the hand came up empty. Tiles were 1 apiece at the end.",
  "15 placements, and the walls had the last word.",
  "17 placements, and the last tile went down alone. The next would have cost 1.",
  "20 placements, then the hand came up empty. Tiles were 1 apiece at the end.",
  "23 placements, and the walls had the last word.",
  "25 placements, and the last tile went down alone. The next would have cost 2.",
  "28 placements, then the hand came up empty. Tiles were 2 apiece at the end.",
  "31 placements, and the walls had the last word.",
  "33 placements, and the last tile went down alone. The next would have cost 2.",
  "36 placements, then the hand came up empty. Tiles were 2 apiece at the end.",
  "39 placements, and the walls had the last word.",
  "4 placements, then the hand came up empty. Tiles were 1 apiece at the end.",
  "41 placements, and the last tile went down alone. The next would have cost 2.",
  "41 placements, and the walls had the last word.",
  "44 placements, then the hand came up empty. Tiles were 3 apiece at the end.",
  "47 placements, and the walls had the last word.",
  "49 placements, and the last tile went down alone. The next would have cost 3.",
  "49 placements, and the walls had the last word.",
  "52 placements, then the hand came up empty. Tiles were 3 apiece at the end.",
  "55 placements, and the walls had the last word.",
  "57 placements, and the last tile went down alone. The next would have cost 3.",
  "57 placements, and the walls had the last word.",
  "60 placements, then the hand came up empty. Tiles were 3 apiece at the end.",
  "63 placements, and the walls had the last word.",
  "7 placements, and the walls had the last word.",
  "9 placements, and the last tile went down alone. The next would have cost 1.",
  "Every tile spent: 13 placements, the cost at 1 and the purse at nothing.",
  "Every tile spent: 21 placements, the cost at 1 and the purse at nothing.",
  "Every tile spent: 29 placements, the cost at 2 and the purse at nothing.",
  "Every tile spent: 37 placements, the cost at 2 and the purse at nothing.",
  "Every tile spent: 45 placements, the cost at 3 and the purse at nothing.",
  "Every tile spent: 5 placements, the cost at 1 and the purse at nothing.",
  "Every tile spent: 53 placements, the cost at 3 and the purse at nothing.",
  "Every tile spent: 61 placements, the cost at 3 and the purse at nothing.",
  "No tiles left after 15 placements. The plane was charging 1 each by then.",
  "No tiles left after 23 placements. The plane was charging 2 each by then.",
  "No tiles left after 31 placements. The plane was charging 2 each by then.",
  "No tiles left after 39 placements. The plane was charging 2 each by then.",
  "No tiles left after 47 placements. The plane was charging 3 each by then.",
  "No tiles left after 55 placements. The plane was charging 3 each by then.",
  "No tiles left after 63 placements. The plane was charging 3 each by then.",
  "No tiles left after 7 placements. The plane was charging 1 each by then.",
  "Nowhere left to stand after 12 placements. The plane walled the run in.",
  "Nowhere left to stand after 20 placements. The plane walled the run in.",
  "Nowhere left to stand after 22 placements. The plane walled the run in.",
  "Nowhere left to stand after 28 placements. The plane walled the run in.",
  "Nowhere left to stand after 30 placements. The plane walled the run in.",
  "Nowhere left to stand after 36 placements. The plane walled the run in.",
  "Nowhere left to stand after 38 placements. The plane walled the run in.",
  "Nowhere left to stand after 4 placements. The plane walled the run in.",
  "Nowhere left to stand after 44 placements. The plane walled the run in.",
  "Nowhere left to stand after 46 placements. The plane walled the run in.",
  "Nowhere left to stand after 54 placements. The plane walled the run in.",
  "Nowhere left to stand after 62 placements. The plane walled the run in.",
  "Out of tiles on the plane, after 11 placements. They cost 1 each by the end.",
  "Out of tiles on the plane, after 19 placements. They cost 1 each by the end.",
  "Out of tiles on the plane, after 27 placements. They cost 2 each by the end.",
  "Out of tiles on the plane, after 3 placements. They cost 1 each by the end.",
  "Out of tiles on the plane, after 35 placements. They cost 2 each by the end.",
  "Out of tiles on the plane, after 43 placements. They cost 2 each by the end.",
  "Out of tiles on the plane, after 51 placements. They cost 3 each by the end.",
  "Out of tiles on the plane, after 59 placements. They cost 3 each by the end.",
  "Stone on every side after 0 placements. The way out never opened.",
  "Stone on every side after 14 placements. The way out never opened.",
  "Stone on every side after 16 placements. The way out never opened.",
  "Stone on every side after 24 placements. The way out never opened.",
  "Stone on every side after 32 placements. The way out never opened.",
  "Stone on every side after 40 placements. The way out never opened.",
  "Stone on every side after 48 placements. The way out never opened.",
  "Stone on every side after 56 placements. The way out never opened.",
  "Stone on every side after 6 placements. The way out never opened.",
  "Stone on every side after 8 placements. The way out never opened.",
  "The expedition is over: 9 placements spent. 23 tiles left standing, never popped.",
  "The expedition is over: 9 placements spent. Everything you built was popped.",
  "The expedition spent itself: 0 placements, the price risen to 1.",
  "The expedition spent itself: 16 placements, the price risen to 1.",
  "The expedition spent itself: 24 placements, the price risen to 2.",
  "The expedition spent itself: 32 placements, the price risen to 2.",
  "The expedition spent itself: 40 placements, the price risen to 2.",
  "The expedition spent itself: 48 placements, the price risen to 3.",
  "The expedition spent itself: 56 placements, the price risen to 3.",
  "The expedition spent itself: 8 placements, the price risen to 1.",
  "The purse ran dry after 10 placements. Tiles were 1 apiece, and nothing was left to pay it.",
  "The purse ran dry after 18 placements. Tiles were 1 apiece, and nothing was left to pay it.",
  "The purse ran dry after 2 placements. Tiles were 1 apiece, and nothing was left to pay it.",
  "The purse ran dry after 26 placements. Tiles were 2 apiece, and nothing was left to pay it.",
  "The purse ran dry after 34 placements. Tiles were 2 apiece, and nothing was left to pay it.",
  "The purse ran dry after 42 placements. Tiles were 2 apiece, and nothing was left to pay it.",
  "The purse ran dry after 50 placements. Tiles were 3 apiece, and nothing was left to pay it.",
  "The purse ran dry after 58 placements. Tiles were 3 apiece, and nothing was left to pay it.",
  "The run built itself into a corner: 1 placements, and no ground a tile could take.",
  "The run built itself into a corner: 11 placements, and no ground a tile could take.",
  "The run built itself into a corner: 17 placements, and no ground a tile could take.",
  "The run built itself into a corner: 19 placements, and no ground a tile could take.",
  "The run built itself into a corner: 25 placements, and no ground a tile could take.",
  "The run built itself into a corner: 27 placements, and no ground a tile could take.",
  "The run built itself into a corner: 33 placements, and no ground a tile could take.",
  "The run built itself into a corner: 35 placements, and no ground a tile could take.",
  "The run built itself into a corner: 43 placements, and no ground a tile could take.",
  "The run built itself into a corner: 51 placements, and no ground a tile could take.",
  "The run built itself into a corner: 59 placements, and no ground a tile could take.",
  "The run built itself into a corner: 9 placements, and no ground a tile could take.",
  "The stone closed in at 10 placements. Every open hex was spoken for.",
  "The stone closed in at 18 placements. Every open hex was spoken for.",
  "The stone closed in at 2 placements. Every open hex was spoken for.",
  "The stone closed in at 26 placements. Every open hex was spoken for.",
  "The stone closed in at 34 placements. Every open hex was spoken for.",
  "The stone closed in at 42 placements. Every open hex was spoken for.",
  "The stone closed in at 50 placements. Every open hex was spoken for.",
  "The stone closed in at 52 placements. Every open hex was spoken for.",
  "The stone closed in at 58 placements. Every open hex was spoken for.",
  "The stone closed in at 60 placements. Every open hex was spoken for.",
  "The torch carried 14 placements out. At 1 a tile, the dark had the last one.",
  "The torch carried 22 placements out. At 2 a tile, the dark had the last one.",
  "The torch carried 30 placements out. At 2 a tile, the dark had the last one.",
  "The torch carried 38 placements out. At 2 a tile, the dark had the last one.",
  "The torch carried 46 placements out. At 3 a tile, the dark had the last one.",
  "The torch carried 54 placements out. At 3 a tile, the dark had the last one.",
  "The torch carried 6 placements out. At 1 a tile, the dark had the last one.",
  "The torch carried 62 placements out. At 3 a tile, the dark had the last one.",
  "Walled in after 13 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 21 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 29 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 3 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 37 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 45 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 5 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 53 placements. Nowhere left to build, nothing left to pop.",
  "Walled in after 61 placements. Nowhere left to build, nothing left to pop.",
]
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the daily badge and the ordinals 1`] = `
{
  "badges": [
    "DAILY #2",
    "DAILY #2 · best 900 · 1 try",
    "DAILY #2 · best 900 · 2 tries",
    "DAILY 2026-08-20",
  ],
  "ordinals": [
    "1st",
    "2nd",
    "3rd",
    "4th",
    "5th",
    "6th",
    "7th",
    "8th",
    "9th",
    "10th",
    "11th",
    "12th",
    "13th",
    "14th",
    "15th",
    "16th",
    "17th",
    "18th",
    "19th",
    "20th",
    "21st",
    "22nd",
    "23rd",
    "24th",
    "25th",
  ],
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the figure captions and the lesson names 1`] = `
{
  "captions": {
    "destinations": "Lit is unclaimed and still pays. Faint means you have already spent it.",
    "place": "Glowing edges are where a tile may go. The faint number is what it would pay.",
    "pop": "Ripe tiles that touch are ONE pocket. They pop together, and leave stone.",
    "rare": "A placed rare wears a ring in its own colour: magic, then unique.",
    "ripen": "Six sides covered: the middle tile is ripe, and worth what matches it.",
    "stash": "The dashed slot is the stash. Tap it to keep the selected card for later.",
  },
  "names": [
    [
      "ripe",
      "RIPE",
    ],
    [
      "pop",
      "POP",
    ],
    [
      "sacrifice",
      "SACRIFICE",
    ],
    [
      "pocket",
      "POCKET",
    ],
    [
      "worth",
      "WORTH",
    ],
    [
      "cache",
      "CACHE",
    ],
    [
      "site",
      "SITE",
    ],
    [
      "shrine",
      "SHRINE",
    ],
    [
      "territory",
      "TERRITORY",
    ],
    [
      "find",
      "FIND",
    ],
    [
      "stone",
      "STONE",
    ],
    [
      "rare",
      "MAGIC",
    ],
    [
      "rareUnique",
      "UNIQUE",
    ],
    [
      "luck",
      "LUCK",
    ],
    [
      "relic",
      "RELICS",
    ],
    [
      "bounty",
      "BOUNTY",
    ],
    [
      "stash",
      "STASH",
    ],
    [
      "sizeBonus",
      "SIZE BONUS",
    ],
  ],
  "shared": {
    "LAST_GASP_RULE": "You may place while ANY tiles remain. The difference is forgiven at zero, and it cannot chain: only a pop lifts you back above zero.",
    "LUCK_CORE": "LUCK is a purse, not a score.",
    "RARE_STAR": "A placed rare tile wears a ring in its own colour and stands taller, so its power stays findable on a full map.",
  },
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the guide, hint, odds and what-still-glows lines 1`] = `
{
  "glows · ended · BARE_TUNING": null,
  "glows · ended · TUNING": null,
  "glows · fresh · BARE_TUNING": null,
  "glows · fresh · TUNING": null,
  "glows · low · BARE_TUNING": null,
  "glows · low · TUNING": null,
  "glows · ripe · BARE_TUNING": null,
  "glows · ripe · TUNING": null,
  "guide · ended · BARE_TUNING": "Low on tiles: POP a pocket for tiles",
  "guide · ended · TUNING": "Low on tiles: POP a pocket now",
  "guide · fresh · BARE_TUNING": null,
  "guide · fresh · TUNING": null,
  "guide · low · BARE_TUNING": "Low on tiles: POP a pocket for tiles",
  "guide · low · TUNING": "Low on tiles: POP a pocket now",
  "guide · ripe · BARE_TUNING": "Pocket ready. Tap one, then POP for tiles or pts",
  "guide · ripe · TUNING": "Pocket ready. Tap one to price it, then POP or sacrifice it",
  "hint · ended · BARE_TUNING": null,
  "hint · ended · TUNING": "A territory to claim glows 5 out.",
  "hint · fresh · BARE_TUNING": null,
  "hint · fresh · TUNING": "A territory to claim glows 5 out.",
  "hint · low · BARE_TUNING": null,
  "hint · low · TUNING": "A territory to claim glows 5 out.",
  "hint · ripe · BARE_TUNING": null,
  "hint · ripe · TUNING": "A territory to claim glows 5 out.",
  "odds · ended · BARE_TUNING": null,
  "odds · ended · TUNING": "magic 2.5% · unique 0.5%",
  "odds · fresh · BARE_TUNING": null,
  "odds · fresh · TUNING": "magic 2.5% · unique 0.5%",
  "odds · low · BARE_TUNING": null,
  "odds · low · TUNING": "magic 2.5% · unique 0.5%",
  "odds · ripe · BARE_TUNING": null,
  "odds · ripe · TUNING": "magic 2.5% · unique 0.5%",
  "whatGlows · at edge · BARE_TUNING": null,
  "whatGlows · at edge · TUNING": "A territory to claim still glows 2 past your edge.",
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the pocket note and every harvest receipt on a ripe board 1`] = `
{
  "harvest · burn · BARE_TUNING": "POPPED 1, total worth 1
+1 pts = worth 1 × pocket 1 × distance 1",
  "harvest · burn · TUNING": "POPPED 1, total worth 1
+1 pts = worth 1 × pocket 1 × distance 1",
  "harvest · points · BARE_TUNING": "POPPED 1, total worth 1
+1 pts = worth 1 × pocket 1 × distance 1",
  "harvest · points · TUNING": "POPPED 1, total worth 1
+1 pts = worth 1 × pocket 1 × distance 1",
  "harvest · tiles · BARE_TUNING": "POPPED 1, total worth 1
+1 tiles: 1 per tile, +1 more per 2 worth.
Luck +1.",
  "harvest · tiles · TUNING": "POPPED 1, total worth 1
+1 tiles: 1 per tile, +1 more per 2 worth.
+1 pts = worth 1 × pocket 1 × distance 1, at 35% per pop.
Luck +10.",
  "harvest · treasure · BARE_TUNING": "POPPED 1, total worth 1
A NULL tile goes to your stash. No tiles, no points.",
  "harvest · treasure · TUNING": "POPPED 1, total worth 1
A NULL tile goes to your stash. No tiles, no points.",
  "pocket · BARE_TUNING": "POCKET OF 1, total worth 1.
POP pays +1 tiles and 1 pts.
The score: worth 1 × pocket 1 × distance 1.",
  "pocket · TUNING": "POCKET OF 1, total worth 1.
POP pays +1 tiles and 1 pts.
The score: worth 1 × pocket 1 × distance 1.",
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the purse card over both tunings and both directions 1`] = `
{
  "BARE_TUNING · daylight": {
    "icon": "luck",
    "rows": [],
    "text": "LUCK IS FOR SPENDING
Every button under your hand is priced in luck, and you CAN lose it all: whatever is left when the run ends is lost outright. Spend it.",
  },
  "BARE_TUNING · torchlit": {
    "icon": "luck",
    "rows": [],
    "text": "LUCK IS FOR SPENDING
Every button under your hand is priced in luck, and you CAN lose it all: whatever is left when the run ends is lost outright. Spend it.",
  },
  "TUNING · daylight": {
    "icon": "luck",
    "rows": [
      {
        "text": "REDRAW · 12. Throw this hand away for a new one.",
      },
      {
        "colour": "green",
        "text": "MOSS · 30. A hand leaning MOSS, and the next 6 draws with it.",
      },
      {
        "colour": "yellow",
        "text": "EMBER · 30. A hand leaning EMBER, and the next 6 draws with it.",
      },
      {
        "colour": "red",
        "text": "ASH · 30. A hand leaning ASH, and the next 6 draws with it.",
      },
      {
        "colour": "blue",
        "text": "TIDE · 30. A hand leaning TIDE, and the next 6 draws with it.",
      },
      {
        "text": "FORGE · 75. Turn the selected card UNIQUE.",
      },
      {
        "text": "SACRIFICE LUCK: the WHOLE purse traded for relics at 15%. Better than dying on it.",
      },
    ],
    "text": "LUCK IS FOR SPENDING
Every button under your hand is priced in luck, and you CAN lose it all: the run’s end pays back only 5% of whatever is left, so a full purse you die on is mostly gone. Spend it.",
  },
  "TUNING · torchlit": {
    "icon": "luck",
    "rows": [
      {
        "text": "REDRAW · 12. Throw this hand away for a new one.",
      },
      {
        "colour": "green",
        "text": "MOSS · 30. A hand leaning MOSS, and the next 6 draws with it.",
      },
      {
        "colour": "yellow",
        "text": "EMBER · 30. A hand leaning EMBER, and the next 6 draws with it.",
      },
      {
        "colour": "red",
        "text": "ASH · 30. A hand leaning ASH, and the next 6 draws with it.",
      },
      {
        "colour": "blue",
        "text": "TIDE · 30. A hand leaning TIDE, and the next 6 draws with it.",
      },
      {
        "text": "FORGE · 75. Turn the selected card UNIQUE.",
      },
      {
        "text": "SACRIFICE LUCK: the WHOLE purse traded for relics at 15%. Better than dying on it.",
      },
    ],
    "text": "LUCK IS FOR SPENDING
Every button under your hand is priced in luck, and you CAN lose it all: the run’s end pays back only 5% of whatever is left, so a full purse you die on is mostly gone. Spend it.",
  },
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the rarity lines 1`] = `
[
  "MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "UNIQUE is wild and heavy: every match it is part of counts DOUBLE, for both sides.",
  null,
]
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins the small labels: goals, unlocks, the shed ladder, features, the tagline 1`] = `
{
  "features": [
    [
      "debug.overlay",
      "Debug overlay",
      "Prints the run’s raw numbers under the board, for reporting a bug.",
    ],
    [
      "ui.sound",
      "Sound",
      "A few quiet notes as you pop and claim.",
    ],
  ],
  "goals": [
    [
      "reach20",
      "Reach 20 hexes from home",
    ],
    [
      "territories4",
      "Hold 4 territories",
    ],
    [
      "known40",
      "Know 40% of the world",
    ],
    [
      "shrinesAll",
      "Wake every shrine",
    ],
    [
      "perksAll",
      "Find every perk",
    ],
  ],
  "shed": [
    [
      "lastError",
      "Storage was full. A diagnostic record was cleared so your run could be saved.",
    ],
    [
      "otherReceipts",
      "Storage was full. Some notes from your other worlds were cleared so your run could be saved.",
    ],
    [
      "timeline",
      "Storage was full. Your diary was cleared so your run could be saved; your worlds, relics and perks are untouched.",
    ],
    [
      "otherWorlds",
      "Storage was full. Your OTHER worlds were forgotten so this run could be saved; the world you are in is untouched.",
    ],
  ],
  "story": [
    "Somebody stayed here once. The plain took it back.",
    "You go out at dusk with a lamp and a handful of ground: a field, a stall, a cut in the rock, a road. You lay it where it will pay.",
    "What you carry home is never much. This place has more than it had yesterday.",
  ],
  "tagline": "A settlement at the edge of a dark plain. Place, ripen, pop, and push on.",
  "unlocks": [
    [
      "draft",
      "A fourth draft card",
    ],
    [
      "hold",
      "A second stash slot",
    ],
    [
      "luck",
      "Twice the rare-tile odds",
    ],
    [
      "reach",
      "Destinations glow from twice as far",
    ],
    [
      "camp",
      "Camps: later runs may begin at your farthest territory",
    ],
  ],
}
`;

exports[`the prose pins — every other word, exactly as it reads today · en > pins what tapping a hex says, on and off the board 1`] = `
{
  "BARE_TUNING · detour · -1,-1": "EMBER tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -1,-2": "Wall: cannot be built on. It surrounds, so it helps things ripen, but it never matches.",
  "BARE_TUNING · detour · -2,1": "TIDE tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -2,2": "ASH tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -3,-1": "Ground native to EMBER: a EMBER tile here is worth one more.",
  "BARE_TUNING · detour · -3,0": "MOSS tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -3,2": "ASH tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -3,3": "MOSS tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · -4,0": "Open ground: you can build here once something of yours touches it.",
  "BARE_TUNING · detour · -4,4": "Ground native to ASH: a ASH tile here is worth one more.",
  "BARE_TUNING · detour · -6,0": "Remembered from an earlier run. This run has not grown here yet.",
  "BARE_TUNING · detour · -6,1": "Dark ground: nothing any run has seen yet. Grow toward it.",
  "BARE_TUNING · detour · 0,1": "EMBER tile, worth 3. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · 1,1": "ASH tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · 2,-1": "TIDE tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · 2,-3": "EMBER tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · detour · 2,0": "TIDE tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -1,-1": "EMBER tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -1,-2": "Wall: cannot be built on. It surrounds, so it helps things ripen, but it never matches.",
  "BARE_TUNING · home · -2,1": "TIDE tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -2,2": "ASH tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -3,-1": "Ground native to EMBER: a EMBER tile here is worth one more.",
  "BARE_TUNING · home · -3,0": "MOSS tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -3,2": "ASH tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -3,3": "MOSS tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · home · -4,0": "Open ground: you can build here once something of yours touches it.",
  "BARE_TUNING · home · -4,4": "Ground native to ASH: a ASH tile here is worth one more.",
  "BARE_TUNING · home · -6,0": "Remembered from an earlier run. This run has not grown here yet.",
  "BARE_TUNING · home · -6,1": "Dark ground: nothing any run has seen yet. Grow toward it.",
  "BARE_TUNING · home · 0,1": "EMBER tile, worth 3. It ripens when all six sides are covered.",
  "BARE_TUNING · home · 1,1": "ASH tile, worth 0. It ripens when all six sides are covered.",
  "BARE_TUNING · home · 2,-1": "TIDE tile, worth 2. It ripens when all six sides are covered.",
  "BARE_TUNING · home · 2,-3": "EMBER tile, worth 1. It ripens when all six sides are covered.",
  "BARE_TUNING · home · 2,0": "TIDE tile, worth 1. It ripens when all six sides are covered.",
  "TUNING · detour · -1,-1": "EMBER tile, worth 5. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · detour · -1,-2": "Wall: cannot be built on. It surrounds, so it helps things ripen, but it never matches, except for ASH, which counts it as one.",
  "TUNING · detour · -1,0": "MOSS tile, worth 0. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.",
  "TUNING · detour · -1,1": "ASH tile, worth 1. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · detour · -2,-1": "Ground native to EMBER: a EMBER tile here is worth one more.",
  "TUNING · detour · -2,0": "ASH tile, worth 0. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · detour · -2,1": "TIDE tile, worth 1. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · detour · -2,2": "ASH tile, worth 3. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · detour · -2,4": "CACHE: build a tile touching it to claim 10 tiles on the spot. Build your chain out to it.",
  "TUNING · detour · -3,0": "Open ground: you can build here once something of yours touches it.",
  "TUNING · detour · -6,0": "Remembered from an earlier run. This run has not grown here yet.",
  "TUNING · detour · -6,1": "Dark ground: nothing any run has seen yet. Grow toward it.",
  "TUNING · detour · 0,-1": "TIDE tile, worth 0. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · detour · 0,-2": "EMBER tile, worth 2. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · detour · 0,0": "EMBER tile, worth 6. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · detour · 0,2": "EMBER tile, worth 3. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · detour · 0,3": "Ground native to TIDE: a TIDE tile here is worth one more.",
  "TUNING · detour · 1,-1": "MOSS tile, worth 1. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.",
  "TUNING · detour · 1,1": "ASH tile, worth 2. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · detour · 2,-1": "TIDE tile, worth 3. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · detour · 2,0": "TIDE tile, worth 4. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · detour · 2,1": "MOSS tile, worth 3. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · detour · 3,-1": "MOSS tile, worth 4. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · detour · 3,-2": "TIDE tile, worth 2. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · home · -1,-1": "EMBER tile, worth 5. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · home · -1,-2": "Wall: cannot be built on. It surrounds, so it helps things ripen, but it never matches, except for ASH, which counts it as one.",
  "TUNING · home · -1,0": "MOSS tile, worth 0. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.",
  "TUNING · home · -1,1": "ASH tile, worth 1. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · home · -2,-1": "Ground native to EMBER: a EMBER tile here is worth one more.",
  "TUNING · home · -2,0": "ASH tile, worth 0. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · home · -2,1": "TIDE tile, worth 1. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · home · -2,2": "ASH tile, worth 3. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · home · -2,4": "CACHE: build a tile touching it to claim 10 tiles on the spot. Build your chain out to it.",
  "TUNING · home · -3,0": "Open ground: you can build here once something of yours touches it.",
  "TUNING · home · -6,0": "Remembered from an earlier run. This run has not grown here yet.",
  "TUNING · home · -6,1": "Dark ground: nothing any run has seen yet. Grow toward it.",
  "TUNING · home · 0,-1": "TIDE tile, worth 0. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · home · 0,-2": "EMBER tile, worth 2. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · home · 0,0": "EMBER tile, worth 6. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · home · 0,2": "EMBER tile, worth 3. It ripens when all six sides are covered.
EMBER: COMPANY. Scores in messy mixed ground: +1 worth per differently-coloured neighbour.",
  "TUNING · home · 0,3": "Ground native to TIDE: a TIDE tile here is worth one more.",
  "TUNING · home · 1,-1": "MOSS tile, worth 1. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.",
  "TUNING · home · 1,1": "ASH tile, worth 2. It ripens when all six sides are covered.
ASH. Stone and walls count as matches for it: it feeds on the spent ground everyone else abandons.",
  "TUNING · home · 2,-1": "TIDE tile, worth 3. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · home · 2,0": "TIDE tile, worth 4. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
  "TUNING · home · 2,1": "MOSS tile, worth 3. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · home · 3,-1": "MOSS tile, worth 4. It ripens when all six sides are covered.
MOSS: CROWDS. Wants one big mob of its own colour: +1 worth per MOSS neighbour past the first.
MAGIC is wild: it matches every neighbouring tile, whatever the colour, and they match it back.",
  "TUNING · home · 3,-2": "TIDE tile, worth 2. It ripens when all six sides are covered.
TIDE. Worth little at home, a lot on the frontier: +1 worth per 6 hexes from home.",
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins every sentence in both epitaph pools, and the spent one 1`] = `
[
  "1 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 1.",
  "12 poses, puis la main est revenue vide. Les tuiles étaient à 1 pièce à la fin.",
  "15 poses, et les murs ont eu le dernier mot.",
  "17 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 1.",
  "20 poses, puis la main est revenue vide. Les tuiles étaient à 1 pièce à la fin.",
  "23 poses, et les murs ont eu le dernier mot.",
  "25 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 2.",
  "28 poses, puis la main est revenue vide. Les tuiles étaient à 2 pièce à la fin.",
  "31 poses, et les murs ont eu le dernier mot.",
  "33 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 2.",
  "36 poses, puis la main est revenue vide. Les tuiles étaient à 2 pièce à la fin.",
  "39 poses, et les murs ont eu le dernier mot.",
  "4 poses, puis la main est revenue vide. Les tuiles étaient à 1 pièce à la fin.",
  "41 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 2.",
  "41 poses, et les murs ont eu le dernier mot.",
  "44 poses, puis la main est revenue vide. Les tuiles étaient à 3 pièce à la fin.",
  "47 poses, et les murs ont eu le dernier mot.",
  "49 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 3.",
  "49 poses, et les murs ont eu le dernier mot.",
  "52 poses, puis la main est revenue vide. Les tuiles étaient à 3 pièce à la fin.",
  "55 poses, et les murs ont eu le dernier mot.",
  "57 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 3.",
  "57 poses, et les murs ont eu le dernier mot.",
  "60 poses, puis la main est revenue vide. Les tuiles étaient à 3 pièce à la fin.",
  "63 poses, et les murs ont eu le dernier mot.",
  "7 poses, et les murs ont eu le dernier mot.",
  "9 poses, et la dernière tuile est tombée toute seule. La suivante aurait coûté 1.",
  "Chaque tuile dépensée : 13 poses, le coût à 1 et la bourse à rien.",
  "Chaque tuile dépensée : 21 poses, le coût à 1 et la bourse à rien.",
  "Chaque tuile dépensée : 29 poses, le coût à 2 et la bourse à rien.",
  "Chaque tuile dépensée : 37 poses, le coût à 2 et la bourse à rien.",
  "Chaque tuile dépensée : 45 poses, le coût à 3 et la bourse à rien.",
  "Chaque tuile dépensée : 5 poses, le coût à 1 et la bourse à rien.",
  "Chaque tuile dépensée : 53 poses, le coût à 3 et la bourse à rien.",
  "Chaque tuile dépensée : 61 poses, le coût à 3 et la bourse à rien.",
  "De la pierre de tous côtés après 0 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 14 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 16 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 24 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 32 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 40 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 48 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 56 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 6 poses. Le passage ne s’est jamais ouvert.",
  "De la pierre de tous côtés après 8 poses. Le passage ne s’est jamais ouvert.",
  "Emmuré après 13 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 21 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 29 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 3 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 37 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 45 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 5 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 53 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "Emmuré après 61 poses. Plus nulle part où bâtir, plus rien à récolter.",
  "La bourse s’est vidée après 10 poses. Les tuiles étaient à 1 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 18 poses. Les tuiles étaient à 1 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 2 poses. Les tuiles étaient à 1 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 26 poses. Les tuiles étaient à 2 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 34 poses. Les tuiles étaient à 2 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 42 poses. Les tuiles étaient à 2 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 50 poses. Les tuiles étaient à 3 pièce, et il ne restait rien pour les payer.",
  "La bourse s’est vidée après 58 poses. Les tuiles étaient à 3 pièce, et il ne restait rien pour les payer.",
  "La partie s’est bâtie dans un coin : 1 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 11 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 17 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 19 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 25 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 27 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 33 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 35 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 43 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 51 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 59 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La partie s’est bâtie dans un coin : 9 poses, et plus un sol qu’une tuile pouvait prendre.",
  "La pierre s’est refermée à 10 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 18 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 2 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 26 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 34 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 42 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 50 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 52 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 58 poses. Chaque hex libre était pris.",
  "La pierre s’est refermée à 60 poses. Chaque hex libre était pris.",
  "La torche a porté 14 poses. À 1 la tuile, le noir a eu la dernière.",
  "La torche a porté 22 poses. À 2 la tuile, le noir a eu la dernière.",
  "La torche a porté 30 poses. À 2 la tuile, le noir a eu la dernière.",
  "La torche a porté 38 poses. À 2 la tuile, le noir a eu la dernière.",
  "La torche a porté 46 poses. À 3 la tuile, le noir a eu la dernière.",
  "La torche a porté 54 poses. À 3 la tuile, le noir a eu la dernière.",
  "La torche a porté 6 poses. À 1 la tuile, le noir a eu la dernière.",
  "La torche a porté 62 poses. À 3 la tuile, le noir a eu la dernière.",
  "L’expédition est finie : 9 poses dépensées. 23 tuiles encore debout, jamais récoltées.",
  "L’expédition est finie : 9 poses dépensées. Tout ce que tu as bâti a été récolté.",
  "L’expédition s’est dépensée : 0 poses, le prix monté à 1.",
  "L’expédition s’est dépensée : 16 poses, le prix monté à 1.",
  "L’expédition s’est dépensée : 24 poses, le prix monté à 2.",
  "L’expédition s’est dépensée : 32 poses, le prix monté à 2.",
  "L’expédition s’est dépensée : 40 poses, le prix monté à 2.",
  "L’expédition s’est dépensée : 48 poses, le prix monté à 3.",
  "L’expédition s’est dépensée : 56 poses, le prix monté à 3.",
  "L’expédition s’est dépensée : 8 poses, le prix monté à 1.",
  "Plus de tuiles sur la plaine, après 11 poses. Elles coûtaient 1 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 19 poses. Elles coûtaient 1 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 27 poses. Elles coûtaient 2 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 3 poses. Elles coûtaient 1 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 35 poses. Elles coûtaient 2 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 43 poses. Elles coûtaient 2 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 51 poses. Elles coûtaient 3 chacune à la fin.",
  "Plus de tuiles sur la plaine, après 59 poses. Elles coûtaient 3 chacune à la fin.",
  "Plus nulle part où se tenir après 12 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 20 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 22 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 28 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 30 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 36 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 38 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 4 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 44 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 46 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 54 poses. La plaine a emmuré la partie.",
  "Plus nulle part où se tenir après 62 poses. La plaine a emmuré la partie.",
  "Plus une tuile après 15 poses. La plaine en demandait 1 chacune rendu là.",
  "Plus une tuile après 23 poses. La plaine en demandait 2 chacune rendu là.",
  "Plus une tuile après 31 poses. La plaine en demandait 2 chacune rendu là.",
  "Plus une tuile après 39 poses. La plaine en demandait 2 chacune rendu là.",
  "Plus une tuile après 47 poses. La plaine en demandait 3 chacune rendu là.",
  "Plus une tuile après 55 poses. La plaine en demandait 3 chacune rendu là.",
  "Plus une tuile après 63 poses. La plaine en demandait 3 chacune rendu là.",
  "Plus une tuile après 7 poses. La plaine en demandait 1 chacune rendu là.",
]
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the daily badge and the ordinals 1`] = `
{
  "badges": [
    "QUOTIDIEN #2",
    "QUOTIDIEN #2 · meilleur 900 · 1 essai",
    "QUOTIDIEN #2 · meilleur 900 · 2 essais",
    "QUOTIDIEN 2026-08-20",
  ],
  "ordinals": [
    "1er",
    "2e",
    "3e",
    "4e",
    "5e",
    "6e",
    "7e",
    "8e",
    "9e",
    "10e",
    "11e",
    "12e",
    "13e",
    "14e",
    "15e",
    "16e",
    "17e",
    "18e",
    "19e",
    "20e",
    "21e",
    "22e",
    "23e",
    "24e",
    "25e",
  ],
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the figure captions and the lesson names 1`] = `
{
  "captions": {
    "destinations": "Allumé, c’est non réclamé et ça paie encore. Éteint, tu l’as déjà dépensé.",
    "place": "Les bords qui luisent sont là où une tuile peut aller. Le chiffre pâle est ce qu’elle paierait.",
    "pop": "Des tuiles mûres qui se touchent font UNE poche. Elles se récoltent ensemble, et laissent de la pierre.",
    "rare": "Une rare posée porte un anneau de sa couleur : magique, puis unique.",
    "ripen": "Six côtés couverts : la tuile du milieu est mûre, et vaut ce qui lui ressemble.",
    "stash": "La case pointillée, c’est la réserve. Touche-la pour garder la carte choisie pour plus tard.",
  },
  "names": [
    [
      "ripe",
      "MÛR",
    ],
    [
      "pop",
      "RÉCOLTER",
    ],
    [
      "sacrifice",
      "SACRIFIER",
    ],
    [
      "pocket",
      "POCHE",
    ],
    [
      "worth",
      "VALEUR",
    ],
    [
      "cache",
      "CACHE",
    ],
    [
      "site",
      "SITE",
    ],
    [
      "shrine",
      "SANCTUAIRE",
    ],
    [
      "territory",
      "TERRITOIRE",
    ],
    [
      "find",
      "TROUVAILLE",
    ],
    [
      "stone",
      "PIERRE",
    ],
    [
      "rare",
      "MAGIQUE",
    ],
    [
      "rareUnique",
      "UNIQUE",
    ],
    [
      "luck",
      "CHANCE",
    ],
    [
      "relic",
      "RELIQUES",
    ],
    [
      "bounty",
      "PRIME",
    ],
    [
      "stash",
      "RÉSERVE",
    ],
    [
      "sizeBonus",
      "BONUS DE TAILLE",
    ],
  ],
  "shared": {
    "LAST_GASP_RULE": "Tu peux poser tant qu’il te reste UNE tuile. La différence est pardonnée à zéro, et ça ne s’enchaîne pas : seule une récolte te ramène au-dessus de zéro.",
    "LUCK_CORE": "La CHANCE est une bourse, pas un score.",
    "RARE_STAR": "Une tuile rare posée porte un anneau de sa couleur et se tient plus haute, pour que son pouvoir reste repérable sur une carte pleine.",
  },
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the guide, hint, odds and what-still-glows lines 1`] = `
{
  "glows · ended · BARE_TUNING": null,
  "glows · ended · TUNING": null,
  "glows · fresh · BARE_TUNING": null,
  "glows · fresh · TUNING": null,
  "glows · low · BARE_TUNING": null,
  "glows · low · TUNING": null,
  "glows · ripe · BARE_TUNING": null,
  "glows · ripe · TUNING": null,
  "guide · ended · BARE_TUNING": "Peu de tuiles : RÉCOLTE une poche pour des tuiles",
  "guide · ended · TUNING": "Peu de tuiles : RÉCOLTE une poche maintenant",
  "guide · fresh · BARE_TUNING": null,
  "guide · fresh · TUNING": null,
  "guide · low · BARE_TUNING": "Peu de tuiles : RÉCOLTE une poche pour des tuiles",
  "guide · low · TUNING": "Peu de tuiles : RÉCOLTE une poche maintenant",
  "guide · ripe · BARE_TUNING": "Poche prête. Touches-en une, puis RÉCOLTE pour des tuiles ou des pts",
  "guide · ripe · TUNING": "Poche prête. Touches-en une pour l’évaluer, puis RÉCOLTE ou sacrifie-la",
  "hint · ended · BARE_TUNING": null,
  "hint · ended · TUNING": "Un territoire à réclamer luit à 5 de distance.",
  "hint · fresh · BARE_TUNING": null,
  "hint · fresh · TUNING": "Un territoire à réclamer luit à 5 de distance.",
  "hint · low · BARE_TUNING": null,
  "hint · low · TUNING": "Un territoire à réclamer luit à 5 de distance.",
  "hint · ripe · BARE_TUNING": null,
  "hint · ripe · TUNING": "Un territoire à réclamer luit à 5 de distance.",
  "odds · ended · BARE_TUNING": null,
  "odds · ended · TUNING": "magique 2,5 % · unique 0,5 %",
  "odds · fresh · BARE_TUNING": null,
  "odds · fresh · TUNING": "magique 2,5 % · unique 0,5 %",
  "odds · low · BARE_TUNING": null,
  "odds · low · TUNING": "magique 2,5 % · unique 0,5 %",
  "odds · ripe · BARE_TUNING": null,
  "odds · ripe · TUNING": "magique 2,5 % · unique 0,5 %",
  "whatGlows · at edge · BARE_TUNING": null,
  "whatGlows · at edge · TUNING": "Un territoire à réclamer luit encore à 2 au-delà de ton bord.",
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the pocket note and every harvest receipt on a ripe board 1`] = `
{
  "harvest · burn · BARE_TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 pts = valeur 1 × poche 1 × distance 1",
  "harvest · burn · TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 pts = valeur 1 × poche 1 × distance 1",
  "harvest · points · BARE_TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 pts = valeur 1 × poche 1 × distance 1",
  "harvest · points · TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 pts = valeur 1 × poche 1 × distance 1",
  "harvest · tiles · BARE_TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 tuiles : 1 par tuile, +1 de plus par 2 de valeur.
Chance +1.",
  "harvest · tiles · TUNING": "RÉCOLTÉ 1, valeur totale 1
+1 tuiles : 1 par tuile, +1 de plus par 2 de valeur.
+1 pts = valeur 1 × poche 1 × distance 1, à 35 % par récolte.
Chance +10.",
  "harvest · treasure · BARE_TUNING": "RÉCOLTÉ 1, valeur totale 1
Une tuile NULL va dans ta réserve. Pas de tuiles, pas de points.",
  "harvest · treasure · TUNING": "RÉCOLTÉ 1, valeur totale 1
Une tuile NULL va dans ta réserve. Pas de tuiles, pas de points.",
  "pocket · BARE_TUNING": "POCHE DE 1, valeur totale 1.
RÉCOLTER paie +1 tuiles et 1 pts.
Le score : valeur 1 × poche 1 × distance 1.",
  "pocket · TUNING": "POCHE DE 1, valeur totale 1.
RÉCOLTER paie +1 tuiles et 1 pts.
Le score : valeur 1 × poche 1 × distance 1.",
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the purse card over both tunings and both directions 1`] = `
{
  "BARE_TUNING · daylight": {
    "icon": "luck",
    "rows": [],
    "text": "LA CHANCE, ÇA SE DÉPENSE
Chaque bouton sous ta main se paie en chance, et tu PEUX tout perdre : ce qui reste à la fin de la partie est perdu net. Dépense-la.",
  },
  "BARE_TUNING · torchlit": {
    "icon": "luck",
    "rows": [],
    "text": "LA CHANCE, ÇA SE DÉPENSE
Chaque bouton sous ta main se paie en chance, et tu PEUX tout perdre : ce qui reste à la fin de la partie est perdu net. Dépense-la.",
  },
  "TUNING · daylight": {
    "icon": "luck",
    "rows": [
      {
        "text": "REPIOCHER · 12. Jette cette main pour une nouvelle.",
      },
      {
        "colour": "green",
        "text": "LICHEN · 30. Une main qui penche LICHEN, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "yellow",
        "text": "TISONS · 30. Une main qui penche TISONS, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "red",
        "text": "CENDRES · 30. Une main qui penche CENDRES, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "blue",
        "text": "RIVIÈRES · 30. Une main qui penche RIVIÈRES, et les 6 prochaines pioches avec.",
      },
      {
        "text": "FORGER · 75. Rends UNIQUE la carte choisie.",
      },
      {
        "text": "SACRIFIER LA CHANCE : TOUTE la bourse échangée contre des reliques à 15 %. Mieux que de mourir dessus.",
      },
    ],
    "text": "LA CHANCE, ÇA SE DÉPENSE
Chaque bouton sous ta main se paie en chance, et tu PEUX tout perdre : la fin de la partie ne rend que 5 % de ce qui reste, alors une bourse pleine sur laquelle tu meurs est presque toute perdue. Dépense-la.",
  },
  "TUNING · torchlit": {
    "icon": "luck",
    "rows": [
      {
        "text": "REPIOCHER · 12. Jette cette main pour une nouvelle.",
      },
      {
        "colour": "green",
        "text": "LICHEN · 30. Une main qui penche LICHEN, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "yellow",
        "text": "TISONS · 30. Une main qui penche TISONS, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "red",
        "text": "CENDRES · 30. Une main qui penche CENDRES, et les 6 prochaines pioches avec.",
      },
      {
        "colour": "blue",
        "text": "RIVIÈRES · 30. Une main qui penche RIVIÈRES, et les 6 prochaines pioches avec.",
      },
      {
        "text": "FORGER · 75. Rends UNIQUE la carte choisie.",
      },
      {
        "text": "SACRIFIER LA CHANCE : TOUTE la bourse échangée contre des reliques à 15 %. Mieux que de mourir dessus.",
      },
    ],
    "text": "LA CHANCE, ÇA SE DÉPENSE
Chaque bouton sous ta main se paie en chance, et tu PEUX tout perdre : la fin de la partie ne rend que 5 % de ce qui reste, alors une bourse pleine sur laquelle tu meurs est presque toute perdue. Dépense-la.",
  },
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the rarity lines 1`] = `
[
  "MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "UNIQUE est passe-partout et pèse lourd : chaque ressemblance dont elle fait partie compte DOUBLE, des deux côtés.",
  null,
]
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins the small labels: goals, unlocks, the shed ladder, features, the tagline 1`] = `
{
  "features": [
    [
      "debug.overlay",
      "Calque de débogage",
      "Affiche les chiffres bruts de la partie sous le plateau, pour signaler un bogue.",
    ],
    [
      "ui.sound",
      "Son",
      "Quelques notes discrètes quand tu récoltes et réclames.",
    ],
  ],
  "goals": [
    [
      "reach20",
      "Atteindre 20 hex du départ",
    ],
    [
      "territories4",
      "Tenir 4 territoires",
    ],
    [
      "known40",
      "Connaître 40 % du monde",
    ],
    [
      "shrinesAll",
      "Éveiller chaque sanctuaire",
    ],
    [
      "perksAll",
      "Trouver chaque atout",
    ],
  ],
  "shed": [
    [
      "lastError",
      "Le stockage était plein. Un rapport de diagnostic a été effacé pour que ta partie puisse être sauvegardée.",
    ],
    [
      "otherReceipts",
      "Le stockage était plein. Des notes de tes autres mondes ont été effacées pour que ta partie puisse être sauvegardée.",
    ],
    [
      "timeline",
      "Le stockage était plein. Ton journal a été effacé pour que ta partie puisse être sauvegardée; tes mondes, tes reliques et tes atouts sont intacts.",
    ],
    [
      "otherWorlds",
      "Le stockage était plein. Tes AUTRES mondes ont été oubliés pour que cette partie puisse être sauvegardée; le monde où tu es est intact.",
    ],
  ],
  "story": [
    "Quelqu’un est resté ici, autrefois. La plaine a tout repris.",
    "Tu sors au crépuscule avec une lampe et un peu de terrain : un champ, un étal, une entaille dans la pierre, un chemin. Tu le poses là où il rapporte.",
    "Ce que tu ramènes n’est jamais grand-chose. Cet endroit en a quand même plus qu’hier.",
  ],
  "tagline": "Un établissement au bord d’une plaine noire. Pose, fais mûrir, récolte, et pousse plus loin.",
  "unlocks": [
    [
      "draft",
      "Une quatrième carte à piocher",
    ],
    [
      "hold",
      "Une deuxième case de réserve",
    ],
    [
      "luck",
      "Deux fois les chances de tuile rare",
    ],
    [
      "reach",
      "Les destinations luisent de deux fois plus loin",
    ],
    [
      "camp",
      "Les camps : les prochaines parties peuvent commencer à ton territoire le plus loin",
    ],
  ],
}
`;

exports[`the prose pins — every other word, exactly as it reads today · fr-CA > pins what tapping a hex says, on and off the board 1`] = `
{
  "BARE_TUNING · detour · -1,-1": "Tuile TISONS, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -1,-2": "Mur : on ne peut pas bâtir dessus. Il entoure, alors il aide à mûrir, mais il ne ressemble jamais.",
  "BARE_TUNING · detour · -2,1": "Tuile RIVIÈRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -2,2": "Tuile CENDRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -3,-1": "Sol natal de TISONS : une tuile TISONS ici vaut un de plus.",
  "BARE_TUNING · detour · -3,0": "Tuile LICHEN, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -3,2": "Tuile CENDRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -3,3": "Tuile LICHEN, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · -4,0": "Sol libre : tu peux bâtir ici dès que quelque chose à toi le touche.",
  "BARE_TUNING · detour · -4,4": "Sol natal de CENDRES : une tuile CENDRES ici vaut un de plus.",
  "BARE_TUNING · detour · -6,0": "Souvenir d’une partie d’avant. Cette partie n’a pas encore poussé ici.",
  "BARE_TUNING · detour · -6,1": "Sol noir : rien qu’aucune partie n’a encore vu. Pousse vers lui.",
  "BARE_TUNING · detour · 0,1": "Tuile TISONS, valeur 3. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · 1,1": "Tuile CENDRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · 2,-1": "Tuile RIVIÈRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · 2,-3": "Tuile TISONS, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · detour · 2,0": "Tuile RIVIÈRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -1,-1": "Tuile TISONS, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -1,-2": "Mur : on ne peut pas bâtir dessus. Il entoure, alors il aide à mûrir, mais il ne ressemble jamais.",
  "BARE_TUNING · home · -2,1": "Tuile RIVIÈRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -2,2": "Tuile CENDRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -3,-1": "Sol natal de TISONS : une tuile TISONS ici vaut un de plus.",
  "BARE_TUNING · home · -3,0": "Tuile LICHEN, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -3,2": "Tuile CENDRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -3,3": "Tuile LICHEN, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · -4,0": "Sol libre : tu peux bâtir ici dès que quelque chose à toi le touche.",
  "BARE_TUNING · home · -4,4": "Sol natal de CENDRES : une tuile CENDRES ici vaut un de plus.",
  "BARE_TUNING · home · -6,0": "Souvenir d’une partie d’avant. Cette partie n’a pas encore poussé ici.",
  "BARE_TUNING · home · -6,1": "Sol noir : rien qu’aucune partie n’a encore vu. Pousse vers lui.",
  "BARE_TUNING · home · 0,1": "Tuile TISONS, valeur 3. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · 1,1": "Tuile CENDRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · 2,-1": "Tuile RIVIÈRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · 2,-3": "Tuile TISONS, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "BARE_TUNING · home · 2,0": "Tuile RIVIÈRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.",
  "TUNING · detour · -1,-1": "Tuile TISONS, valeur 5. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · detour · -1,-2": "Mur : on ne peut pas bâtir dessus. Il entoure, alors il aide à mûrir, mais il ne ressemble jamais, sauf pour CENDRES, qui le comptent.",
  "TUNING · detour · -1,0": "Tuile LICHEN, valeur 0. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.",
  "TUNING · detour · -1,1": "Tuile CENDRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · detour · -2,-1": "Sol natal de TISONS : une tuile TISONS ici vaut un de plus.",
  "TUNING · detour · -2,0": "Tuile CENDRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · detour · -2,1": "Tuile RIVIÈRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · detour · -2,2": "Tuile CENDRES, valeur 3. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · detour · -2,4": "CACHE : pose une tuile qui la touche pour réclamer 10 tuiles sur-le-champ. Fais grandir ta chaîne jusque-là.",
  "TUNING · detour · -3,0": "Sol libre : tu peux bâtir ici dès que quelque chose à toi le touche.",
  "TUNING · detour · -6,0": "Souvenir d’une partie d’avant. Cette partie n’a pas encore poussé ici.",
  "TUNING · detour · -6,1": "Sol noir : rien qu’aucune partie n’a encore vu. Pousse vers lui.",
  "TUNING · detour · 0,-1": "Tuile RIVIÈRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · detour · 0,-2": "Tuile TISONS, valeur 2. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · detour · 0,0": "Tuile TISONS, valeur 6. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · detour · 0,2": "Tuile TISONS, valeur 3. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · detour · 0,3": "Sol natal de RIVIÈRES : une tuile RIVIÈRES ici vaut un de plus.",
  "TUNING · detour · 1,-1": "Tuile LICHEN, valeur 1. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.",
  "TUNING · detour · 1,1": "Tuile CENDRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · detour · 2,-1": "Tuile RIVIÈRES, valeur 3. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · detour · 2,0": "Tuile RIVIÈRES, valeur 4. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · detour · 2,1": "Tuile LICHEN, valeur 3. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · detour · 3,-1": "Tuile LICHEN, valeur 4. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · detour · 3,-2": "Tuile RIVIÈRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · home · -1,-1": "Tuile TISONS, valeur 5. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · home · -1,-2": "Mur : on ne peut pas bâtir dessus. Il entoure, alors il aide à mûrir, mais il ne ressemble jamais, sauf pour CENDRES, qui le comptent.",
  "TUNING · home · -1,0": "Tuile LICHEN, valeur 0. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.",
  "TUNING · home · -1,1": "Tuile CENDRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · home · -2,-1": "Sol natal de TISONS : une tuile TISONS ici vaut un de plus.",
  "TUNING · home · -2,0": "Tuile CENDRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · home · -2,1": "Tuile RIVIÈRES, valeur 1. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · home · -2,2": "Tuile CENDRES, valeur 3. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · home · -2,4": "CACHE : pose une tuile qui la touche pour réclamer 10 tuiles sur-le-champ. Fais grandir ta chaîne jusque-là.",
  "TUNING · home · -3,0": "Sol libre : tu peux bâtir ici dès que quelque chose à toi le touche.",
  "TUNING · home · -6,0": "Souvenir d’une partie d’avant. Cette partie n’a pas encore poussé ici.",
  "TUNING · home · -6,1": "Sol noir : rien qu’aucune partie n’a encore vu. Pousse vers lui.",
  "TUNING · home · 0,-1": "Tuile RIVIÈRES, valeur 0. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · home · 0,-2": "Tuile TISONS, valeur 2. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · home · 0,0": "Tuile TISONS, valeur 6. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · home · 0,2": "Tuile TISONS, valeur 3. Elle mûrit quand ses six côtés sont couverts.
TISONS : COMPAGNIE. Marque dans le sol mêlé : +1 de valeur par voisine d’une autre couleur.",
  "TUNING · home · 0,3": "Sol natal de RIVIÈRES : une tuile RIVIÈRES ici vaut un de plus.",
  "TUNING · home · 1,-1": "Tuile LICHEN, valeur 1. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.",
  "TUNING · home · 1,1": "Tuile CENDRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.
CENDRES. La pierre et les murs comptent comme des ressemblances pour elles : elles se nourrissent du sol usé que tout le monde abandonne.",
  "TUNING · home · 2,-1": "Tuile RIVIÈRES, valeur 3. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · home · 2,0": "Tuile RIVIÈRES, valeur 4. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
  "TUNING · home · 2,1": "Tuile LICHEN, valeur 3. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · home · 3,-1": "Tuile LICHEN, valeur 4. Elle mûrit quand ses six côtés sont couverts.
LICHEN : FOULE. Veut une seule grosse gang de sa couleur : +1 de valeur par voisine LICHEN passé la première.
MAGIQUE est passe-partout : elle ressemble à chaque tuile voisine, peu importe la couleur, et elles lui ressemblent en retour.",
  "TUNING · home · 3,-2": "Tuile RIVIÈRES, valeur 2. Elle mûrit quand ses six côtés sont couverts.
RIVIÈRES : COURANT. Vaut peu au départ, beaucoup à la frontière : +1 de valeur par 6 hex de distance du départ.",
}
`;
